# canopy

./: .cursorrules  .dockerignore  .env.local.example  .envrc  .gitignore  ARCHITECTURE.md  ASSISTANT_TOOLS_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CSV_IMPORT_GUIDE.md  DEPLOYMENT.md  EMERGENCY_DEPLOYMENT.md  IMPORT_FEATURE_SUMMARY.md  MASTER_PROMPT.md  MERGE_PROCESS.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  MONARCH_PARITY.md  Makefile  PERFORMANCE_AUDIT.md  README.md  VERIFICATION_ROUTING.md  docker-compose.yml  ledgerlight.yaml  monitoring.yaml  test_app.sh  test_csv_import.py  transactions-168437284355933952-168437284350262619-89cf9f28-65f8-4479-98a2-2966e6acf748.csv
backend/: .env.assistant  .env.example  .python-version  Dockerfile  __init__.py  alembic.ini  conftest.py  main.py  pyproject.toml  requirements.txt  test_assistant.py
backend/alembic/: README  env.py
backend/alembic/versions/: 20260131_0001_001_initial_portfolio_schema.py  20260131_0002_add_insights_models.py  20260201_0003_add_transactions_table.py  20260219_0004_add_financial_profile.py  (+18 more)
backend/api/: __init__.py  accounts.py  admin.py  assistant.py  budgets.py  cashflow.py  contextual_insights.py  csv_import.py  currency.py  fx.py  insights.py  integrations.py  monarch_import.py  portfolio.py  portfolio_reviews.py  recurring_patterns.py  rules.py  transactions.py  wealthsimple_import.py
backend/app/: __init__.py  config.py  server.py
backend/db/: __init__.py  base.py  session.py
backend/ingest/: __init__.py  tasks.py
backend/models/: __init__.py  assistant.py  budget.py  budget_responses.py  cashflow.py  csv_import.py  currency.py  golden_questions.py  monarch_import_schemas.py  portfolio.py  portfolio_review_schemas.py  portfolio_schemas.py  recurring.py  rule.py  transaction.py  wealthsimple_import_schemas.py
backend/scripts/: __init__.py  migrate.sh  reset_data.py  seed_portfolio.py  wait-for-db.sh
backend/services/: account_optimizer.py  admin.py  assistant_service.py  assistant_tools.py  budget_service.py  canonical_hash.py  cashflow_service.py  contextual_insights.py  csv_parser.py  exchange_rate_service.py  fire_calculator.py  fx.py  golden_questions.py  insights_calculator.py  monarch_api_client.py  moomoo_integration.py  portfolio_calculator.py  portfolio_review_parser.py  price_fetcher.py  query_builder.py  query_limits.py  questrade_integration.py  recurring_detection_service.py  recurring_service.py  rule_service.py  tax_rules_engine.py  transaction_rules_engine.py  wise_integration.py
backend/tests/: __init__.py  conftest.py  test_accounts_list_monarch_repair.py  test_accounts_multi_currency.py  test_admin_reset.py  test_assistant_tools.py  test_assistant_tools_batch1.py  test_assistant_tools_batch2.py  test_budgets_api.py  test_canonical_hash.py  test_cashflow_service.py  test_category_model.py  test_contextual_insights.py  test_csv_amex_monthly_ca.py  test_csv_amex_year_end.py  test_fire_snapshot_cagr.py  test_fx_service.py  test_golden_questions.py  test_health.py  test_monarch_api_client.py  test_monarch_balances_importer.py  test_monarch_balances_parser.py  test_monarch_importer.py  test_monarch_parser.py  test_networth_timeline_multi_currency.py  test_portfolio_review_parser.py  test_recurring_detection_service.py  test_rule_service.py  test_transaction_rules_engine.py  test_wealthsimple_description_parser.py  test_wealthsimple_filename_parser.py  test_wealthsimple_importer.py
(+184 files in other folders)
