[project]
name = "canopy-backend"
version = "1.0.0"
description = "Canopy - Self-hosted personal finance, investment, and budgeting dashboard."
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0,<0.111.0",
    "uvicorn[standard]>=0.27.0,<0.28.0",
    "pydantic>=2.6.0,<2.7.0",
    "pydantic-settings>=2.2.0,<2.3.0",
    "celery>=5.3.0,<5.4.0",
    "redis>=5.0.0,<5.1.0",
    "psycopg[binary]>=3.1.0,<3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<8.1.0",
    "httpx>=0.27.0,<0.28.0",
    "ruff>=0.3.0,<0.4.0",
]

[tool.pytest.ini_options]
# Resolve ``from backend.x import ...`` when pytest is invoked either
# from the repo root or from ``backend/``.
pythonpath = [".", ".."]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
extend = "../../workspace-config/python/ruff.toml"
line-length = 120  # Override shared default (100)

[tool.ruff.lint.per-file-ignores]
# Long regex strings and literal CSV rows must stay on one line.
"services/wealthsimple/description_parser.py" = ["E501"]
"tests/test_wealthsimple_importer.py" = ["E501"]
"tests/test_portfolio_review_parser.py" = ["E501"]
"scripts/seed_portfolio.py" = ["E501"]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

